<resources>
    <string name="app_name">Accountant</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_reports">Reports</string>
    <string name="title_shopping_list">Shopping List</string>
    <string name="title_add_expense">Add Expense</string>
    <string name="title_settings">Settings</string>
    <string name="expense_amount">Amount</string>
    <string name="authority">Authority</string>
    <string name="fragment_add_expense">Hello blank fragment</string>
    <string name="menu_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="add_new_expense">Add New Expense</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="choose_category">Choose Category</string>
    <string name="shopping_list">Shopping List: 0</string>
    <string name="pick_category">Choose Category</string>
    <string name="select_shopping_list">Select Shopping List Items</string>
    <string name="ok">Ok</string>
    <string name="add_new_shopping_list_item">Add New Shopping List Item</string>
    <string name="item_name">Item Name</string>
    <string name="comment">Comment</string>
    <string name="payed_off_in">Payed off in:</string>
    <string name="creation_date">Creation date:</string>
    <string name="name">Name:</string>
</resources>
