<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_add_shopping_list_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fragment_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_shopping_list_item"
        android:textColor="@color/WhiteDark"
        android:background="@color/GrayDark"
        android:gravity="center_horizontal"
        android:padding="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@color/GrayLight"
            android:padding="8dp">

            <EditText
                android:id="@+id/shopping_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Green"
                android:backgroundTintMode="src_in"
                android:ellipsize="start"
                android:gravity="center_horizontal"
                android:hint="@string/item_name"
                android:inputType="text"
                android:textColorHint="@color/Green"
                android:textColor="@color/Green" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@color/GrayLight"
            android:padding="8dp">

            <EditText
                android:id="@+id/shopping_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Green"
                android:backgroundTintMode="src_in"
                android:hint="@string/comment"
                android:layout_gravity="top|start"
                android:minLines="3"
                android:maxLines="5"
                android:inputType="textMultiLine"
                android:textColorHint="@color/Green"
                android:scrollbars="vertical"
                android:textColor="@color/Green" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Gray"
            android:weightSum="1">

            <TextView
                android:id="@+id/shopping_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="4dp"
                android:textSize="18sp"
                android:layout_marginStart="12dp"
                android:textColorHint="@color/Green"
                android:textColor="@color/Orange"
                android:text="@string/cancel" />

            <TextView
                android:id="@+id/shopping_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="4dp"
                android:textSize="18sp"
                android:gravity="end"
                android:layout_marginEnd="24dp"
                android:textColorHint="@color/Green"
                android:textColor="@color/Orange"
                android:text="@string/add" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>