<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Gray"
    android:padding="8dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Orange"
                android:layout_marginEnd="8dp"
                android:text="@string/creation_date"/>

            <TextView
                android:id="@+id/list_shopping_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Green"
                android:text="Creation date"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Orange"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Orange"
                android:layout_marginEnd="8dp"
                android:text="@string/name"/>

            <TextView
                android:id="@+id/list_shopping_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Green"
                android:text="Name"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Orange"
                android:layout_marginEnd="8dp"
                android:text="@string/payed_off_in"/>

            <TextView
                android:id="@+id/list_shopping_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expense id"
                android:textColor="@color/Green"/>

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>